Fixed color background color dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+body {
+  @apply dark:bg-black
+}
+
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
